[gd_scene load_steps=2 format=3 uid="uid://u724ytsb31qe"]

[ext_resource type="Script" uid="uid://cqtwn5vsloqwh" path="res://login_screen.gd" id="1_abcde"]

[node name="LoginScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_abcde")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Enter Username:"

[node name="UsernameInput" type="LineEdit" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Username"

[node name="SubmitButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Start
"

[node name="LeaderboardButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Leaderboard
"
